# aeron-haskell

./: .gitignore  .hlint.yaml  CLAUDE.md  README.md  README.org  aeron-haskell.cabal  flake.nix  fourmolu.yaml  justfile  my-project.cabal
app/: Main.hs
bench/: Main.hs
cbits/: aeron_shim.c  aeron_shim.h
docs/: m4-batched-poll.md  m4-batched-poll.org  optimizations.org
src/: Aeron.hs  MyLib.hs
src/Aeron/: Error.hs
src/Aeron/FFI/: Batch.hsc  Raw.hs  Types.hsc
test/: Main.hs
