cabal-version:   3.0
name:            aeron-haskell
version:         0.1.0.0
synopsis:        Haskell bindings to the Aeron C client
license:         MIT
build-type:      Simple
extra-doc-files: README.md

common common-options
  default-language:   GHC2021
  ghc-options:
    -Wall -Wcompat -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints -Wunused-packages

  default-extensions:
    BangPatterns
    DerivingStrategies
    GeneralisedNewtypeDeriving
    ImportQualifiedPost
    LambdaCase
    NamedFieldPuns
    OverloadedStrings
    PatternSynonyms
    ScopedTypeVariables
    TypeApplications

library
  import:           common-options
  hs-source-dirs:   src
  exposed-modules:
    Aeron
    Aeron.Error
    Aeron.FFI.Batch
    Aeron.FFI.Raw
    Aeron.FFI.Types

  -- The batching shim. It is what lets the poll be imported `unsafe`: GHC
  -- forbids an unsafe call from re-entering Haskell, so the fragment handler
  -- has to be C. See docs/m4-batched-poll.md.
  c-sources:        cbits/aeron_shim.c
  includes:         aeron_shim.h
  install-includes: aeron_shim.h
  include-dirs:     cbits
  cc-options:       -O2 -Wall

  -- The C client lives in libaeron.so (NOT libaeron_client_shared.so, which is
  -- the C++ wrapper and exports none of the aeron_* C symbols). aeron-cpp ships
  -- no pkg-config file, so include/lib dirs come from Nix buildInputs.
  extra-libraries:  aeron
  build-depends:
    , base        >=4.17 && <5
    , bytestring

executable aeron-haskell
  import:         common-options
  hs-source-dirs: app
  main-is:        Main.hs

  -- The bound thread that Aeron's client operations run on requires -threaded.
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , aeron-haskell
    , base           >=4.17 && <5

benchmark aeron-haskell-bench
  import:         common-options
  type:           exitcode-stdio-1.0
  hs-source-dirs: bench
  main-is:        Main.hs

  -- -O2 matters here: the measurement loops must not be the bottleneck.
  ghc-options:    -threaded -rtsopts -O2 -with-rtsopts=-N2
  build-depends:
    , aeron-haskell
    , base           >=4.17 && <5
    , bytestring
    , directory
    , process

test-suite aeron-haskell-test
  import:         common-options
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Main.hs
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , aeron-haskell
    , base           >=4.17 && <5
    , bytestring
    , directory
    , filepath
    , process
